--- a/webroot/adm/client-key.html
+++ b/webroot/adm/client-key.html
@@ -59,7 +59,7 @@ document.addEventListener('DOMContentLoaded', function () {
     name: 'roles',
     label: 'Roles',
     required: true,
-    size: 'multi-line'
+    type: 'multi-line'
   };
 
   const keyIdInput = {
