--- a/webroot/adm/partner-config.html
+++ b/webroot/adm/partner-config.html
@@ -28,7 +28,7 @@ document.addEventListener('DOMContentLoaded', function () {
     name: 'configData',
     label: 'Configuration Data',
     required: true,
-    size: 'multi-line',
+    type: 'multi-line',
     placeholder: 'Enter JSON configuration data...'
   };
 
