--- a/webroot/adm/salt.html
+++ b/webroot/adm/salt.html
@@ -50,7 +50,7 @@ document.addEventListener('DOMContentLoaded', function () {
     label: 'Min Ages (seconds)',
     required: true,
     defaultValue: '2592000,5184000,7776000,10368000,12960000,15552000,18144000,20736000,23328000,25920000,28512000,31104000,33696000',
-    size: 'multi-line'
+    type: 'multi-line'
   };
 
   const operationConfig = {
