--- a/webroot/adm/service-link.html
+++ b/webroot/adm/service-link.html
@@ -3,10 +3,6 @@
   <meta charset="UTF-8">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="/js/main.js"></script>
-  <script type="module" src="/js/dangerModal.js"></script>
-  <script type="module" src="/js/operations.js"></script>
-  <script type="module" src="/js/output.js"></script>
-  <script type="module" src="/js/roleBadge.js"></script>
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -20,8 +16,8 @@
 </div>
 
 <script type="module">
-import { initializeOperations } from '/js/operations.js';
-import { initializeOutput } from '/js/output.js';
+import { initializeOperations } from '/js/component/operations.js';
+import { initializeOutput } from '/js/component/output.js';
 
 document.addEventListener('DOMContentLoaded', function () {
   const siteIdInput = {
@@ -54,24 +50,28 @@ document.addEventListener('DOMContentLoaded', function () {
   const rolesInput = {
     name: 'roles',
     label: 'Roles',
-    required: false,
+    required: true,
     type: 'multi-select',
     options: [
       {
-        value: 'MAINTAINER',
-        label: 'MAINTAINER',
-        hint: 'General maintenance and administrative operations'
+        value: 'MAPPER',
+        label: 'MAPPER',
+        hint: 'For Advertisers'
       },
       {
-        value: 'PRIVILEGED',
-        label: 'PRIVILEGED',
-        hint: 'Elevated operations requiring special approval'
+        value: 'ID_READER',
+        label: 'ID_READER',
+        hint: 'For DSPs'
       },
       {
-        value: 'SECRET_ROTATION',
-        label: 'SECRET_ROTATION',
-        hint: 'Permission to rotate encryption keys and secrets'
-      }
+        value: 'GENERATOR',
+        label: 'GENERATOR',
+        hint: 'For Publishers'
+      },
+      {
+        value: 'SHARER',
+        label: 'SHARER',
+      },
     ]
   };
 
