Add Readme for the new UI

--- a/webroot/adm/site.html
+++ b/webroot/adm/site.html
@@ -252,7 +252,7 @@ document.addEventListener('DOMContentLoaded', function () {
     danger: [
         {
           id: 'setSiteTypes',
-          title: 'Set Site Types (Empty)',
+          title: 'Set Site Types',
           role: 'maintainer',
           inputs: [
             siteIdInput,
