--- a/webroot/adm/oncall/participant-summary.html
+++ b/webroot/adm/oncall/participant-summary.html
@@ -64,8 +64,7 @@
                 <div class="row px-2">
                     <div class="col section">
                         <h5>Participant API Keys</h5>
-																								<p>TESTING</p>
-						<pre id="grafanaApiKeyUsage"></pre>
+						<a id="grafanaApiKeyUsage" target="_blank">API Key Usage Dashboard</a>
                         <pre class="errorDiv" id="participantKeysErrorOutput"></pre>
                         <pre id="participantKeysStandardOutput"></pre>
                     </div>
