added operator and optout dashboard links

--- a/webroot/adm/oncall/participant-summary.html
+++ b/webroot/adm/oncall/participant-summary.html
@@ -72,6 +72,7 @@
                 <div class="row px-2">
                     <div class="col section">
                         <h5>Client Side Keypairs</h5>
+																								<a id="grafanaCstg" target="_blank">CSTG Dashboard</a>
                         <pre class="errorDiv" id="keyPairsErrorOutput"></pre>
                         <pre id="keyPairsStandardOutput"></pre>
                     </div>
@@ -85,6 +86,7 @@
                     <div class="col section">
                         <h5>Participant Operator Keys</h5>
                         <pre class="errorDiv" id="operatorKeysErrorOutput"></pre>
+																								<a id="operatorDashboard" target="_blank"></a>
                         <pre id="operatorKeysStandardOutput"></pre>
                     </div>
                 </div>
@@ -92,6 +94,7 @@
                     <div class="col section">
                         <h5>Participant Opt-out Webhook</h5>
                         <pre class="errorDiv" id="webhooksErrorOutput"></pre>
+																								<a id="optOutDashboard" target="_blank"></a>
                         <pre id="webhooksStandardOutput"></pre>
                     </div>
                 </div>
