added uidtype and currentenv as params

--- a/webroot/adm/oncall/participant-summary.html
+++ b/webroot/adm/oncall/participant-summary.html
@@ -86,7 +86,7 @@
                     <div class="col section">
                         <h5>Participant Operator Keys</h5>
                         <pre class="errorDiv" id="operatorKeysErrorOutput"></pre>
-																								<a id="operatorDashboard" target="_blank"></a>
+																								<a id="operatorDashboard" target="_blank" style="visibility: hidden;">Operator Dashboard</a>
                         <pre id="operatorKeysStandardOutput"></pre>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                     <div class="col section">
                         <h5>Participant Opt-out Webhook</h5>
                         <pre class="errorDiv" id="webhooksErrorOutput"></pre>
-																								<a id="optOutDashboard" target="_blank"></a>
+																								<a id="optOutDashboard" target="_blank" style="visibility: hidden;">Opt Out Dashboard</a>
                         <pre id="webhooksStandardOutput"></pre>
                     </div>
                 </div>
