--- a/webroot/adm/salt.html
+++ b/webroot/adm/salt.html
@@ -41,14 +41,6 @@ document.addEventListener('DOMContentLoaded', function () {
     defaultValue: defaultTargetDate
   };
 
-  const minAgesMultilineInput = {
-    name: 'minAges',
-    label: 'Min Ages (seconds)',
-    required: true,
-    defaultValue: '2592000,5184000,7776000,10368000,12960000,15552000,18144000,20736000,23328000,25920000,28512000,31104000,33696000',
-    type: 'multi-line'
-  };
-
   const operationConfig = {
     read: [
       {
@@ -81,16 +73,14 @@ document.addEventListener('DOMContentLoaded', function () {
         role: 'superuser',
         inputs: [
           fractionInput,
-          targetDateInput,
-          minAgesMultilineInput
+          targetDateInput
         ],
         apiCall: {
           method: 'POST',
           getUrl: (inputs) => {
-            const minAges = encodeURIComponent(inputs.minAges);
             const fraction = encodeURIComponent(inputs.fraction);
             const targetDate = encodeURIComponent(inputs.targetDate);
-            return `/api/salt/rotate?min_ages_in_seconds=${minAges}&fraction=${fraction}&target_date=${targetDate}`;
+            return `/api/salt/rotate?fraction=${fraction}&target_date=${targetDate}`;
           }
         }
       }
